[package]
name = "limecord-core"
version = "0.1.0"
authors = ["Pelanyo Kamara <pkamara@pkamara.me>"]
edition = "2018"

[dependencies]
# this uses the latest version of rocket (0.5), be sure to change the version = 0.5 upon actual release
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0.117"
serde_repr = "0.1.6"
serde_derive = "1.0.117" 
jsonwebtoken = "7"
chrono = "0.4"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
default-features = false
features = ["json", "uuid", "helmet"]